# thermo

./: .gitignore  .pre-commit-config.yaml  env.yml  pyproject.toml  readme.md  requirements.txt  setup.cfg
data/: gaultois_features.csv  gaultois_labels.csv  gaultois_targets.csv  gaultois_te_survey_2016.03.01.xlsx  materials_dbs.csv  materials_dbs.yml  mp_formulas.csv  screen_formulas.csv
dft/: fetch_cod_structs.py  readme.md  yunwei-thermoelectric-dft-steps.md
hpc/: cpu_submit  gpu_submit  gurobi.lic  readme.md  rsync.include
notebooks/: boston_housing_hmc.py  dropout.py  hmc.py  mnf.py  random_forest.py  relaxation_time.py
notebooks/aleatoric_vs_epistemic/: random_forest.py  tf_dropout.py  torch_dropout.py
notebooks/automatminer/: amm_vs_magpie.py  bootstrap_uncertainty.py  direct-vs-indirect-zt.py
notebooks/data/: feature_manifolds.py  gaultois_data_characteristics.py
notebooks/data/gaultois_stats/: gaultois_stats.py
notebooks/leaderboard/: cv.py  roost+rf.py  single_run.py
notebooks/leaderboard/mnf_vs_rf/: mnf_vs_rf.py
notebooks/multitask/: cross_val.py  ensemble.py
notebooks/screen/: amm+rf.py  amm.py  dft.py
notebooks/screen/mnf_magpie/: correlation_matrix.csv  gurobi_candidates.csv  merge_gurobi+greedy.py  mnf-candidates-with-mp-ids.csv  mnf_magpie_screen.py
notebooks/screen/random_forest/: 2019.08.06-random_candidates.csv  correlation_matrix.csv  greedy_candidates.csv  greedy_candidates.tex  gurobi_candidates.tex  high_risk_candidates.csv  lrhr_candidates.csv  lrhr_materials.csv  random_forest.py  rf_seebeck_abs_corr.tex
notebooks/screen/random_forest_magpie/: gurobi_candidates.csv  high_risk_candidates.csv  least_total_corr_candidates.csv  lrhr_candidates.csv  random_forest.py
src/: data.py  featurize.py  hyper_opt.py
src/bnn/: __init__.py  hmc.py  map.py  tf_dropout.py  torch_dropout.py
src/data/: fetch.py  load.py  transform.py
src/gp/: hyper_opt.py
src/notebooks/: boston_housing_hmc.py  dropout.py  feature_embeddings.py  hmc.py  materials_dbs.py  mnf.py  random_forest.py  relaxation_time.py
src/notebooks/aleatoric_vs_epistemic/: random_forest.py  tf_dropout.py  torch_dropout.py
src/notebooks/automatminer/: amm_vs_magpie.py  bootstrap_uncertainty.py  direct-vs-indirect-zt.py
src/notebooks/leaderboard/: cv.py  roost+rf.py  single_run.py
src/plots/: __init__.py  elements.py  residuals.py  true_vs_pred.py  uncertainty.py  utils.py
src/rf/: __init__.py  forest.py  hyper_opt.py
src/utils/: __init__.py  amm.py  atom_count.py  correlation.py  decorators.py  evaluate.py  plots.py
tests/: readme.md  test_data.py
tests/utils/: test_atom_count.py  test_decorators.py
thermo/: conftest.py  correlation.py  evaluate.py  featurize.py  gp.py  hyper_opt.py  plots.py  rf.py
thermo/bnn/: __init__.py  hmc.py  map.py  tf_dropout.py  torch_dropout.py
thermo/data/: __init__.py  fetch.py  load.py  transform.py
thermo/gp/: hyper_opt.py
thermo/notebooks/: boston_housing_hmc.py  dropout.py  feature_embeddings.py  hmc.py  materials_dbs.py  mnf.py  random_forest.py
thermo/plots/: __init__.py  elements.py  nn.py  true_vs_pred.py  uncertainty.py  utils.py
thermo/rf/: __init__.py  forest.py  hyper_opt.py
thermo/utils/: __init__.py  amm.py  atom_count.py  decorators.py  evaluate.py
(+23 files in other folders)
